--- a/README
+++ b/README
@@ -9,11 +9,13 @@ Thin is a Ruby web server that glues together 3 of the best Ruby libraries in we
 Which makes it, with all humility, the most secure, stable, fast and extensible Ruby web server
 bundled in an easy to use gem for your own pleasure.
 
+Site:  http://code.macournoyer.com/thin/
+Group: http://groups.google.com/group/thin-ruby/topics
+Bugs:  http://thin.lighthouseapp.com/projects/7212-thin
+Code:  http://github.com/macournoyer/thin
+IRC:   #thin on freenode
+
 === Installation
-IMPORTANT: Until EventMachine 0.11.0 is out, you have to install it from trunk or from my gem server:
-
- sudo gem install eventmachine --source http://code.macournoyer.com
-
 For the latest stable version:
 
  sudo gem install thin
@@ -27,6 +29,10 @@ Or from source:
  git clone git://github.com/macournoyer/thin.git
  cd thin
  rake install
+
+To use Thin with UNIX domain sockets you need EventMachine 0.11.0 from my gem server:
+
+ gem install eventmachine --source http://code.macournoyer.com
 
 === Usage
 A +thin+ script offers an easy way to start your Rails application:
