--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-== 0.8.0 ??? release
+== 0.8.0 Dodgy Dentist release
  * Serve static file only on GET and HEAD requests in Rails adapter, fixes #58
  * Add threaded option to run server in threaded mode, calling the application in a
    thread allowing for concurrency in the Rack adapter, closes #46
