--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
-== 0.8.2 ??? release
+== 0.8.2 Double Margarita release
+ * Require EventMachine 0.12.0
  * [bug] Fix timeout handling when running command
  * [bug] Fix hanging when restarting and no process is running in single server move, fixes #67
  * Added Mack adapter [markbates]
