--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+== 1.0.0 The Big release
+ * Update halycon adapter loader [mtodd]
+
 == 0.8.2 Double Margarita release
  * Require EventMachine 0.12.0
  * [bug] Fix timeout handling when running command
