Runner now remembers -r, -D and -V parameters so that clustered servers inherit those and `restart` keep your parameters.

--- a/README
+++ b/README
@@ -57,7 +57,7 @@ You need to setup a config.ru file and pass it to the thin script:
  
  run app
 
- thin start -r config.ru
+ thin start -R config.ru
  
 See example directory for more samples and run 'thin -h' for usage.
 
