--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
-== ? release
+== 1.2.2 I Find Your Lack of Sauce Disturbing release
+ * Fix force kill under 1.9 [Alexey Chebotar]
  * Fix regression when --only option is used w/ --socket.
  * Add process name 'tag' functionality. Easier to distinguish thin daemons 
    from eachother in process listing [ctcherry]
