--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+== 1.2.5 This Is Not A Web Server
+ * Ensure Rack base API is used in Rails adapter only if version >= 2.3.2 [#111 state:resolved]
+
 == 1.2.4 Flaming Astroboy
  * Fix a few issues in thin to make it a better "gem citizen" [josh]
  * Fix test for rack based Rails in adapter under Ruby >= 1.8.7 [#109 state:resolved]
