--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+== 1.2.6
+ * Fix Thin not obeying to QUIT / TERM signal under Ruby 1.9 [Nate Wiger] [#123 state:resolved]
+
 == 1.2.5 This Is Not A Web Server
  * Add rolling restart support (--onebyone option) [sikachu]
  * Force external_encoding of request's body to ASCII_8BIT [jeremyz]
