--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 == 1.2.6 Crazy Delicious
+ * Make work with Rails 3 out-of-the-box.
  * Auto-detect and load config.ru files on start. Makes Rails 3 work.
  * Fix signals being ignored under 1.9 when daemonized.
 
