--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+== 1.2.9 Black Keys Extra Plus Wow
+ * Improve fat binary loading.
+
 == 1.2.8 Black Keys
  * Allow the connection to remain open for 1xx statuses [timshadel]
 
