Add some warnings for bad releases in changelog.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,10 +1,10 @@
 == 1.2.11 Bat-Shit Crazy
  * Fix pure Ruby gem to not include binary.
 
-== 1.2.10 I'm dumb
+== 1.2.10 I'm dumb (BAD RELEASE, DON'T USE)
  * I really am (bad release fix)
 
-== 1.2.9 Black Keys Extra Plus Wow
+== 1.2.9 Black Keys Extra Plus Wow (BAD RELEASE, DON'T USE)
  * Improve fat binary loading.
 
 == 1.2.8 Black Keys
