BREAKING CHANGE: Remove automatic Content-Length setting.
Thin can't do this in a Rack compatible way (has_key? is not part of the spec) and performant way.
It is now the responsibility of the app (or a middleware) to set the Content-Length.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,6 @@
-== 1.2.12 ???
+== 1.3.0 Double Espresso
+ * BREAKING CHANGE: Remove automatic Content-Length setting.
+   It is now the responsibility of the app (or a middleware) to set the Content-Length.
  * Log errors to STDERR [textgoeshere]
  * Shut down gracefully when receiving SIGTERM [ddollar]
      
