--- a/README
+++ b/README
@@ -18,7 +18,7 @@ IRC:   #thin on freenode
 === Installation
 For the latest stable version:
 
- sudo gem install thin
+ gem install thin
 
 Or from source:
 
