--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-== Thin
+= Thin
 Tiny, fast & funny HTTP server
 
 Thin is a Ruby web server that glues together 3 of the best Ruby libraries in web history:
@@ -9,13 +9,13 @@ Thin is a Ruby web server that glues together 3 of the best Ruby libraries in we
 Which makes it, with all humility, the most secure, stable, fast and extensible Ruby web server
 bundled in an easy to use gem for your own pleasure.
 
-Site:  http://code.macournoyer.com/thin/
-Group: http://groups.google.com/group/thin-ruby/topics
-Bugs:  http://thin.lighthouseapp.com/projects/7212-thin
-Code:  http://github.com/macournoyer/thin
-IRC:   #thin on freenode
+Site  ::  http://code.macournoyer.com/thin
+Group :: http://groups.google.com/group/thin-ruby/topics
+Bugs  ::  http://thin.lighthouseapp.com/projects/7212-thin
+Code  ::  http://github.com/macournoyer/thin
+IRC   ::   #thin on freenode
 
-=== Installation
+== Installation
 For the latest stable version:
 
  sudo gem install thin
@@ -26,7 +26,7 @@ Or from source:
  cd thin
  rake install
 
-=== Usage
+== Usage
 A +thin+ script offers an easy way to start your Rails application:
 
  cd to/your/rails/app
@@ -34,7 +34,7 @@ A +thin+ script offers an easy way to start your Rails application:
 
 But Thin is also usable with a Rack config file.
 You need to setup a config.ru file and pass it to the thin script:
-  
+
  cat config.ru
  app = proc do |env|
   [
@@ -46,18 +46,19 @@ You need to setup a config.ru file and pass it to the thin script:
     ['hi']
   ]
  end
- 
+
  run app
 
  thin start -R config.ru
- 
+
 See example directory for more samples and run 'thin -h' for usage.
 
-=== License
+== License
 Ruby License, http://www.ruby-lang.org/en/LICENSE.txt.
 
-=== Credits
+== Credits
 The parser was stolen from Mongrel http://mongrel.rubyforge.org by Zed Shaw.
+
 Mongrel Web Server (Mongrel) is copyrighted free software by Zed A. Shaw
 <zedshaw at zedshaw dot com> You can redistribute it and/or modify it under
 either the terms of the GPL.
@@ -65,5 +66,6 @@ either the terms of the GPL.
 Thin is copyright Marc-Andre Cournoyer <macournoyer@gmail.com>
 
 Get help at http://groups.google.com/group/thin-ruby/
+
 Report bugs at http://thin.lighthouseapp.com/projects/7212-thin
 and major security issues directly to a team member (see COMMITTERS)
