--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+== 1.4.0
+ * kill -USR1 $PID for log rotation [catwell]
+
 == 1.3.2 Low-bar Squat
  * Remove mack and halcyon Rack adapters from automatic detection.
 
