--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,7 @@
 == 1.4.0
- * kill -USR1 $PID for log rotation [catwell]
+ * kill -USR1 $PID for log rotation [catwell].
+ * Fix HUP signal being reseted after deamonization [atotic].
+ * Fix error with nil addresses in Connection#socket_address.
 
 == 1.3.2 Low-bar Squat
  * Remove mack and halcyon Rack adapters from automatic detection.
