Add changelog for last commit.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 == 1.5.0 Knife
  * Raise an error when no PID file.
+ * Prevent duplicate response headers.
 
 == 1.4.1 Chromeo Fix
  * Fix error when sending USR1 signal and no log file is supplied.
