Add changelog entry for last pull.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,7 @@
  * Raise an error when no PID file.
  * Prevent duplicate response headers.
  * Make proper response on exception [MasterLambaster].
+ * Automatically close idling pipeline connections on server stop [MasterLambaster].
 
 == 1.4.1 Chromeo Fix
  * Fix error when sending USR1 signal and no log file is supplied.
