--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+== EDGE
+ * Fix issue when running as another user/group without a PID file.
+
 == 1.5.0 Knife
  * Fix compilation under Ubuntu 12.04 with -Werror=format-security option.
  * Raise an error when no PID file.
