--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-== EDGE
+== 1.6.0 Greek Yogurt
  * Accept absolute URL in request line.
  * HEAD request no longer return a message-body in the response.
  * Do not stop EventMachine reactor loop unless it was started by Thin.
