Add CHANGELOG entry for logging changes.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,19 @@
  * HEAD request no longer return a message-body in the response.
  * Do not stop EventMachine reactor loop unless it was started by Thin.
  * Pipelining is no longer supported.
+ * Enhance the logging subsystem [Akshay Moghe].
+
+     0. Separate the request tracing from logging
+     1. logging level is now user controllable
+        a. user can specify custom logger, thereby controlling
+           how+where (level+file) messages are logged to.
+     2. tracing is individually controllable
+        a.  user can specify custom trace logger, getting
+            all the benefits as stated above.
+
+    This retains the old logging mechanism (via the
+    new log_<level> mechanism. The old mechanism, if used,
+    emits deprecation warnings to stderr.
 
 == 1.5.1 Straight Razor
  * Fix issue when running as another user/group without a PID file.
