--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,7 @@
  * Accept absolute URL in request line, eg.: GET http://site.com/he/lo.
  * HEAD request no longer return a message-body in the response.
  * No longer stop EventMachine's reactor loop unless it was started by Thin.
+ * Make headers upcasing locale-agnostic.
  * Use Ruby's `Logger` for logging. [Akshay Moghe].
    The logger can now be set using `Thin::Logging.logger=`.
    Tracing of request is handled by a second logger, `Thin::Logging.trace_logger=`.
