--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,8 +1,8 @@
 == 1.6.0 Greek Yogurt
- * Accept absolute URL in request line, eg.: GET http://site.com/he/lo.
- * HEAD request no longer return a message-body in the response.
+ * Accept absolute URL in request line, eg.: 'GET http://site.com/he/lo HTTP/1.1'.
+ * HEAD request no longer return a body in the response.
  * No longer stop EventMachine's reactor loop unless it was started by Thin.
- * Make headers upcasing locale-agnostic.
+ * Make request env keys upcasing locale-agnostic.
  * Use Ruby's `Logger` for logging. [Akshay Moghe].
    The logger can now be set using `Thin::Logging.logger=`.
    Tracing of request is handled by a second logger, `Thin::Logging.trace_logger=`.
