--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 == 1.6.1 ???
  * Regression: Default logger to STDOUT when using outside of CLI.
+ * Downgrade Rack version to >= 1.4.
 
 == 1.6.0 Greek Yogurt
  * Accept absolute URL in request line, eg.: 'GET http://site.com/he/lo HTTP/1.1'.
