Add kqueue support for BSD / Mac OS X
* Don't try to enable epoll on unsupported platform
* Auto-enable kqueue on supported platform
* Add `--no-kqueue` option to disable kqueue
* Remove unneeded manual calls to EM.epoll/kqueue from examples
* Remove no-epoll from config example in README
* Update specs and changelog
* Remove dot from threadpool option help for consistency

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+ * Don't try to enable epoll on unsupported platform [felixbuenemann]
+ * Add kqueue support for BSD/Darwin, disable with `--no-kqueue` [felixbuenemann]
 == 1.6.3 Protein Powder
  * Add HTTP 422 status code [rajcybage]
  * Add warning about EM reactor still running when stopping.
