--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+== 1.7.1 Muffin Mode
+ * Ruby 2.4 support (Fixnum deprecation) [nimish-mehta]
+ * Allow ERB templates in config files [markets]
+
 == 1.7.0 Dunder Mifflin
  * Rack 2 support
  * Ensure Response body.close is called in the same thread
@@ -12,7 +16,6 @@
  * When restarting, exit on a next tick so we can send response back to a client [rsamoilov]
  * Check for empty PID files [z1dane]
  * Update Event Machine version to 1.0.4, Ruby 2.2.0 fix [freemanoid]
-
 
 == 1.6.3 Protein Powder
  * Add HTTP 422 status code [rajcybage]
